# claude-trace

./: .gitignore  CLAUDE.md  CONTINUITY.md  Cargo.toml  README.md  claude-trace  dev.sh
.github/workflows/: build-dmg.yml  ci-app.yml  ci-site.yml  ci.yml  deploy-site.yml
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBar/: ClaudeTraceMenuBarApp.swift  Info.plist  StatusBarController.swift
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBar.xcodeproj/: project.pbxproj
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBar/Models/: ProcessMonitor.swift
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBar/Services/: NotificationService.swift  ProcessDetailWindowController.swift  ReleaseNotesWindowController.swift
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBar/Views/: MenuBarView.swift  ProcessDetailWindow.swift  ProcessRowView.swift  ReleaseNotesView.swift  ResizablePopoverContainer.swift  SettingsView.swift
apps/ClaudeTraceMenuBar/ClaudeTraceMenuBarTests/: AllTests.swift  Package.swift
cli/: Cargo.toml  claude-trace
cli/src/: main.rs
cli/tests/: claude-trace.bats  test_helper.bash
cli/tests/fixtures/: expected_json.json  ps_output_normal.txt  ps_output_orphaned.txt
docs/: CLI.md  DEVELOPMENT.md  DIAGNOSTICS.md  TROUBLESHOOTING.md
scripts/: generate_icons.py
site/: next.config.js  package-lock.json  package.json  tailwind.config.ts
site/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
site/src/components/: CLI.tsx  Features.tsx  Footer.tsx  Hero.tsx  ImageCarousel.tsx  JsonLd.tsx  Nav.tsx  index.ts
src/: main.rs
(+7 files in other folders)
