[package]
name = "claude-diagnose"
version = "0.2.1"
edition = "2021"
description = "Advanced diagnostics for Claude Code CLI CPU issues on macOS"
authors = ["claude-trace contributors"]
license = "MIT"

[[bin]]
name = "claude-diagnose"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
regex = "1.10"
anyhow = "1.0"
inferno = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
